Update feature branch unit tests workflow
Change the name of a step

--- a/.github/workflows/feature_unittest.yml
+++ b/.github/workflows/feature_unittest.yml
@@ -18,6 +18,6 @@ jobs:
       contents: read
       packages: write
     steps:
-    - name: Build with Maven
+    - name: Run unit tests
       run: ./mvnw clean test
       
