--- a/.github/workflows/feature_unittest.yml
+++ b/.github/workflows/feature_unittest.yml
@@ -19,6 +19,7 @@ jobs:
       contents: read
       packages: write
     steps:
+    - uses: actions/checkout@v3
     - name: Run unit tests
       run: ./mvnw clean test
       
