--- a/.github/workflows/feature_unittest.yml
+++ b/.github/workflows/feature_unittest.yml
@@ -20,6 +20,13 @@ jobs:
       packages: write
     steps:
     - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+        cache: 'maven'
     - name: Run unit tests
       run: ./mvnw clean test
       
