--- a/.github/workflows/pullrequest_integrationtest.yml
+++ b/.github/workflows/pullrequest_integrationtest.yml
@@ -21,5 +21,13 @@ jobs:
       contents: read
       packages: write
     steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+        cache: 'maven'
     - name: Run integration tests
       run: ./mvnw clean integration-test
