--- a/.github/workflows/pullrequest_integrationtest.yml
+++ b/.github/workflows/pullrequest_integrationtest.yml
@@ -11,8 +11,7 @@ on:
     branches:
       - main
       - 'ci/**'
-    types:
-      - created
+    types: [opened, reopened]
 
 jobs:
   integrationtest:
