Comment out triggers used for testing

--- a/.github/workflows/pullrequest_integrationtest.yml
+++ b/.github/workflows/pullrequest_integrationtest.yml
@@ -7,8 +7,10 @@
 name: Pull request integration tests
 
 on:
-  push:
-    branches-ignore: [main]
+# --> For testing purposes
+#  push:
+#    branches-ignore: [main]
+# <--
   pull_request:
     branches:
       - main
