--- a/.github/workflows/merging_or_pushing_to_main.yml
+++ b/.github/workflows/merging_or_pushing_to_main.yml
@@ -27,8 +27,16 @@ jobs:
       contents: read
       packages: write
     steps:
-    - name: Run integration tests
-      run: ./mvnw clean integration-test
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          cache: 'maven'
+      - name: Run integration tests
+        run: ./mvnw clean integration-test
   
   maven-build:
     runs-on: ubuntu-latest
